# ftdi-mpsse

./: CMakeLists.txt  Makefile  ftdi_infra.c  ftdi_infra.h  ftdi_mid.c
